<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".M001ActMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="@dimen/margin_l_20">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@color/teal_500">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_settings_call_24"
                android:padding="@dimen/padding_s_10"/>

            <EditText
                android:id="@+id/et_call_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/teal_500"
                android:clickable="true"
                android:focusable="true"

                android:hint="@string/txt_call"
                android:inputType="phone"
                android:paddingVertical="@dimen/padding_m_15"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/size_m"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/tv_date_time_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/gray_light"
            android:clickable="true"
            android:focusable="true"


            android:text="@string/txt_time"
            android:padding="@dimen/padding_s_10"
            android:textColor="@color/gray"
            android:textSize="@dimen/size_m" />

        <Button
            android:id="@+id/btn_setup_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/teal_500"
            android:padding="@dimen/padding_s_10"

            android:text="@string/txt_setup"
            android:textColor="@color/white"
            android:textSize="@dimen/size_m" />
    </LinearLayout>


</LinearLayout>