<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.act.M001ActMenu"
    android:id="@+id/ll_linear_layout">

    <include layout="@layout/actionbar_home"
        android:id="@+id/action_bar"/>
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/dl_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Chèn fragment vào fl_home này -->
        <FrameLayout
            android:id="@+id/fl_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:fontFamily="sans-serif"
                android:text="@string/txt_hello"
                android:textColor="@color/orange_700"
                android:textSize="40sp" />

        </FrameLayout>

        <!-- Thông tin chi tiết menu chứa trong ln_menu này -->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/ln_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableRow

                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:padding="@dimen/padding_m_15"

                    android:gravity="center_vertical"
                    android:background="@color/orange_700">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"

                        android:background="@drawable/bg_radius"
                        android:padding="@dimen/padding_m_15"
                        android:src="@drawable/ic_calendar"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_s_10"
                        android:text="@string/txt_plan"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_l"/>
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray_light"/>

                <TableRow
                    android:id="@+id/tr_sms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_m_15"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="@dimen/padding_ss_5"
                        android:background="@drawable/bg_radius"

                        android:src="@drawable/ic_sms_24"
                        app:tint="@color/orange_200"
                        android:backgroundTint="@color/red_500"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_s_10"
                        android:text="@string/txt_make_sms"
                        android:textColor="@color/orange_700"
                        android:textSize="@dimen/size_m"/>
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray_light"/>

                <TableRow
                    android:id="@+id/tr_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_m_15"

                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="@dimen/padding_s_10"
                        android:src="@drawable/ic_settings_call_24"

                        app:tint="@color/red_500" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_s_10"
                        android:text="@string/txt_make_call"
                        android:textColor="@color/orange_700"
                        android:textSize="@dimen/size_m"/>
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray_light"/>

                <TableRow
                    android:id="@+id/tr_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_m_15"

                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="@dimen/padding_s_10"
                        android:src="@drawable/ic_alarm_24"
                        app:tint="@color/red_500" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_s_10"
                        android:text="@string/txt_make_alarm"
                        android:textColor="@color/orange_700"
                        android:textSize="@dimen/size_m"/>
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray_light"/>


            </LinearLayout>


        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>